--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
+# VSCode
 .vscode/*
-.*/*
-.vscode/settings.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *.pyc[cod]
 
-*.pdf
+# tmp/*
